# merlint

./: .gitignore  .merlint  .merlintrc  .merlintrc.example  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  KISS_RULES.md  LICENSE.md  README.md  REVIEW_NOTES.md  TODO.md  comparison_summary.md  cyclomatic.opam  debug_dune.ml  dune-project  merlint.opam  simple.ml  test_extract.ml  test_location.ml  test_module_tmp.ml  test_obj.ml  test_output.md  typedtree.txt  typedtree_usage_analysis.md
lib/: api_design.ml  api_design.mli  ast.ml  ast.mli  ast_checks.ml  ast_checks.mli  browse.ml  browse.mli  command.ml  command.mli  complexity.ml  complexity.mli  config.ml  config.mli  config_file.ml  config_file.mli  config_parser.ml  config_parser.mli  context.ml  context.mli  cyclomatic_complexity.ml  cyclomatic_complexity.mli  data.ml  data.mli  doc.ml  doc.mli  doc_rules.ml  doc_rules.mli  docs.ml  docs.mli  dump.ml  dump.mli  dune  dune.ml  dune.mli  engine.ml  engine.mli  engine2.ml  example.ml  example.mli  (+76 more)
lib/rules/: e001.ml  e001.ml.tmp  e001.mli  e005.ml  e005.mli  e010.ml  e010.mli  e100.ml  e100.mli  e105.ml  e105.mli  e110.ml  e110.mli  e200.ml  e200.mli  e205.ml  e205.mli  e300.ml  e300.mli  e305.ml  e305.mli  e310.ml  e310.mli  e315.ml  e315.mli  e320.ml  e320.mli  e325.ml  e325.mli  e330.ml  e330.mli  e331.ml  e332.ml  e335.ml  e335.mli  e340.ml  e340.mli  e350.ml  e350.mli  e351.ml  (+32 more)
lib/rules2/: e001.ml  e100.ml  e351.ml
test/: cyclomatic.t  dune  dune_sexp_test  merlint.t  test.ml  test.mli  test_api_design.ml  test_api_design.mli  test_ast.ml  test_ast.mli  test_browse.ml  test_browse.mli  test_command.ml  test_command.mli  test_complexity.ml  test_complexity.mli  test_config.ml  test_config.mli  test_config_parser.ml  test_config_parser.mli  test_context.ml  test_context.mli  test_data.ml  test_data.mli  test_doc.ml  test_doc.mli  test_docs.ml  test_docs.mli  test_dump.ml  test_dump.mli  test_dune.ml  test_dune.mli  test_e001.ml  test_engine.ml  test_engine.mli  test_example.ml  test_example.mli  test_file.ml  test_file.mli  test_filter.ml  (+47 more)
test/cram/: dune
test/cram/e001.t/: .merlint  .merlintrc  ast_dump.txt  bad.ml  debug_ast  debug_ast.ml  dune  good.ml  run.t
test/cram/e005.t/: ast_dump.txt  bad.ml  dune  good.ml  long_record.ml  pattern_match.ml  run.t
test/cram/e010.t/: bad.ml  dune  good.ml  run.t
test/cram/e100.t/: bad.ml  dune  good.ml  run.t
test/cram/e105.t/: bad.ml  broad.ml  dune  good.ml  run.t  specific.ml  (+1 more)
test/samples/: bad_names.ml  bad_style.ml  bad_test.mli  boolean_blindness.ml  catch_all.ml  catch_all_patterns.ml  catch_all_test.ml  complex.ml  deep_nesting.ml  dune  error_patterns.ml  full_output.txt  function_naming.ml  good_test.ml  good_test.mli  long_function.ml  missing_docs.mli  mutable_state.ml  process.ml  simple.ml  stubs.ml  temp_str_test.ml  temp_test_style.ml  test_sample_test.ml  underscore_binding.ml  uses_printf.ml  uses_str.ml  warning_sample.ml
(+236 files in other folders)
