(executable
 (public_name test)
 (name test)
 (libraries merlint alcotest logs.fmt fmt fmt.tty))

(cram
 (deps %{bin:merlint}))

(rule
 (alias runtest)
 (deps
  ../bin/check_test_integrity.exe
  (source_tree cram))
 (action
  (run ../bin/check_test_integrity.exe)))

(rule
 (alias runtest)
 (deps
  %{bin:merlint}
  (source_tree ../lib)
  (source_tree ../bin))
 (action
  (run merlint ../lib ../bin)))
