(executable
 (public_name test)
 (name test)
 (libraries merlint alcotest logs.fmt fmt fmt.tty))

; TODO: Re-enable merlint self-check after fixing all issues
; (rule
;  (alias runtest)
;  (deps
;   %{bin:merlint}
;   (source_tree ../lib)
;   (source_tree ../bin))
;  (action
;   (run merlint ../lib ../bin)))
